<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/scroll_to_top"
        android:icon="@drawable/ic_baseline_arrow_upward_24"
        android:orderInCategory="50"
        android:title="@string/scroll_to_top"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/scroll_to_bottom"
        android:icon="@drawable/ic_baseline_arrow_downward_24"
        android:orderInCategory="60"
        android:title="@string/scroll_to_bottom"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_outline_info_24"
        android:orderInCategory="99"
        android:title="@string/about"
        app:showAsAction="ifRoom">

    </item>


</menu>