<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:elevation="10dp"
    android:padding="16dp"
    app:cardCornerRadius="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center_horizontal"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="25sp"

            />


        <TextView
            android:id="@+id/about_version_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:text="@string/techpop"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/about_build_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:text="@string/build_date"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:text="@string/by_michael_may"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="32dp"
            android:text="@string/bombadu_apps"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>